--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,33 @@
-[functions]
-  timeout = 30
+[
+build
+]
+  command = "npm run build"
+  publish = ".next"
+
+[[
+plugins
+]]
+  package = "@netlify/plugin-nextjs"
+
+[
+functions
+]
+  included_files = ["node_modules/@prisma/client/*"]
+
+[
+functions.api
+]
+  external_node_modules = ["@prisma/client"]
+  node_bundler = "esbuild"
+
+[
+build.environment
+]
+  NEXT_TELEMETRY_DISABLED = "1"
+
+[
+functions
+]
+  node_bundler = "esbuild"
+  external_node_modules = ["@prisma/client"]
+  timeout = "30s"
