--- a/netlify.toml
+++ b/netlify.toml
@@ -1,33 +1,27 @@
-[
-build
-]
+[build]
+
   command = "npm run build"
   publish = ".next"
 
-[[
-plugins
-]]
+[[plugins]]
+
   package = "@netlify/plugin-nextjs"
 
-[
-functions
-]
+[functions]
+
   included_files = ["node_modules/@prisma/client/*"]
 
-[
-functions.api
-]
+[functions.api]
+
   external_node_modules = ["@prisma/client"]
   node_bundler = "esbuild"
 
-[
-build.environment
-]
+[build.environment]
+
   NEXT_TELEMETRY_DISABLED = "1"
 
-[
-functions
-]
+[functions]
+
   node_bundler = "esbuild"
   external_node_modules = ["@prisma/client"]
   timeout = "30s"
